--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Temperature Hot</title>
+    <title>Weather Checker</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -51,7 +51,7 @@
           alt=""
         />
         <h1 id="city">Dhaka</h1>
-        <h3><span id="temperature">38.06</span>&deg;C</h3>
+        <h3><span id="temperature">24</span>&deg;C</h3>
         <h1 id="weather-condition" class="lead">Clouds</h1>
       </div>
     </div>
